optimized dockerfile for smaller image size